# Distributed-Project

./: README.md
Client/: Cargo.toml
Client/src/: main.rs
Server/: Cargo.toml
Server/src/: main.rs
src/: main.rs  message.rs
