[package]
name = "ServSend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.6"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.79"
queues = "1.0.2"
image = "0.24.7"
